--- a/reservas/package.json
+++ b/reservas/package.json
@@ -2,5 +2,11 @@
   "devDependencies": {
     "@types/node": "^24.3.1",
     "serverless-offline": "^14.4.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.883.0",
+    "@aws-sdk/lib-dynamodb": "^3.883.0",
+    "aws-sdk": "^2.1692.0",
+    "dotenv": "^17.2.2"
   }
 }
